# Caffe_Test

./: .gitignore  README.md
demo/Caffe_Test/: Caffe_Test.cpp  cifar10.cpp  common.hpp  funset.cpp  funset.hpp  lenet-5.cpp  mnist.cpp  mnist_convert.cpp  mnist_predict.cpp  mnist_train.cpp
demo/ThirdPartyLibrary_Test/: ThirdPartyLibrary_Test.cpp  boost_test.cpp  boost_test.hpp  caffe_tmp.pb.cc  caffe_tmp.pb.h  gflags_test.cpp  gflags_test.hpp  glog_test.cpp  glog_test.hpp  hdf5_test.cpp  hdf5_test.hpp  leveldb_test.cpp  leveldb_test.hpp  lmdb_test.cpp  lmdb_test.hpp  ml.helloworld.pb.cc  ml.helloworld.pb.h  openblas_test.hpp  openblase_test.cpp  protobuf_test.cpp  protobuf_test.hpp  snappy_test.cpp  snappy_test.hpp
demo/test_mnist/: test_mnist.cpp
demo/thrid_library/: caffe_tmp.pb.cc  caffe_tmp.pb.h  funset.cpp  funset.hpp  ml.helloworld.pb.cc  ml.helloworld.pb.h  testThridLibrary.cpp  test_openblas.cpp
demo/tools_convert_mnist_data/: tools_convert_mnist_data.cpp
demo/train_mnist/: train_mnist.cpp
prj/linux_cmake_Caffe_Test/: CMakeLists.txt  build.sh
prj/linux_cmake_ThirdPartyLibrary_Test/: CMakeLists.txt  build.sh
prj/x86_x64_vc12/Caffe/: Caffe.sln
prj/x86_x64_vc12/Caffe_GPU_Test/: Caffe_GPU_Test.vcxproj  Caffe_GPU_Test.vcxproj.filters
prj/x86_x64_vc12/Caffe_Test/: Caffe_Test.vcxproj  Caffe_Test.vcxproj.filters
prj/x86_x64_vc12/ThirdPartyLibrary_Test/: ThirdPartyLibrary_Test.vcxproj  ThirdPartyLibrary_Test.vcxproj.filters
prj/x86_x64_vc12/caffe_vs2013_lib/: caffe_vs2013_lib.vcxproj  caffe_vs2013_lib.vcxproj.filters
prj/x86_x64_vc12/gflags/: gflags.vcxproj  gflags.vcxproj.filters
prj/x86_x64_vc12/hdf5/: hdf5.vcxproj  hdf5.vcxproj.filters
prj/x86_x64_vc12/hdf5_cpp/: hdf5_cpp.vcxproj  hdf5_cpp.vcxproj.filters
prj/x86_x64_vc12/hdf5_hl/: hdf5_hl.vcxproj  hdf5_hl.vcxproj.filters
prj/x86_x64_vc12/hdf5_hl_cpp/: hdf5_hl_cpp.vcxproj  hdf5_hl_cpp.vcxproj.filters
prj/x86_x64_vc12/leveldb/: leveldb.vcxproj  leveldb.vcxproj.filters
prj/x86_x64_vc12/libcaffe/: libcaffe.vcxproj  libcaffe.vcxproj.filters
prj/x86_x64_vc12/libcaffe_gpu/: libcaffe_gpu.vcxproj  libcaffe_gpu.vcxproj.filters
prj/x86_x64_vc12/libglog/: libglog.vcxproj  libglog.vcxproj.filters
prj/x86_x64_vc12/libopenblas/: libopenblas.vcxproj  libopenblas.vcxproj.filters
prj/x86_x64_vc12/libprotobuf/: libprotobuf.vcxproj  libprotobuf.vcxproj.filters
prj/x86_x64_vc12/libprotobuf-lite/: libprotobuf-lite.vcxproj  libprotobuf-lite.vcxproj.filters
prj/x86_x64_vc12/libprotoc/: libprotoc.vcxproj  libprotoc.vcxproj.filters
prj/x86_x64_vc12/lmdb/: lmdb.vcxproj  lmdb.vcxproj.filters
prj/x86_x64_vc12/protoc/: protoc.vcxproj  protoc.vcxproj.filters
prj/x86_x64_vc12/snappy/: snappy.vcxproj  snappy.vcxproj.filters
prj/x86_x64_vc12/testThridLibrary/: testThridLibrary.vcxproj  testThridLibrary.vcxproj.filters
prj/x86_x64_vc12/test_mnist/: test_mnist.vcxproj  test_mnist.vcxproj.filters
prj/x86_x64_vc12/tools_convert_mnist_data/: tools_convert_mnist_data.vcxproj  tools_convert_mnist_data.vcxproj.filters
prj/x86_x64_vc12/train_mnist/: train_mnist.vcxproj  train_mnist.vcxproj.filters
src/: version.txt
src/caffe/caffe/: make.exe.stackdump
src/caffe/caffe/scripts/: build_win.cmd
src/hdf5/: H5Tinit.c  H5pubconf.h
src/hdf5/hl/tools/: Makefile.in
src/hdf5/shared/: H5lib_settings.c
src/lmdb/: getopt.c  getopt.h  unistd.h
src/openblas/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  OpenBLAS.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  libopenblas.vcxproj  libopenblas.vcxproj.filters  openblas.def
src/openblas/cmake/: lapack.cmake
src/openblas/driver/level2/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  driver_level2.vcxproj  driver_level2.vcxproj.filters
src/openblas/driver/level3/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  driver_level3.vcxproj  driver_level3.vcxproj.filters
src/openblas/driver/others/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  driver_others.vcxproj  driver_others.vcxproj.filters
src/openblas/interface/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  interface.vcxproj  interface.vcxproj.filters
src/openblas/kernel/: RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  kernel.vcxproj  kernel.vcxproj.filters
src/openblas/kernel/x86_64/: dgemm_kernel_4x8_haswell.S
src/openblas/utest/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  openblas_utest.vcxproj  openblas_utest.vcxproj.filters
src/snappy/: snappy-stubs-public.h
test_data/Net/: lenet-5_mnist_linux_solver.prototxt  lenet-5_mnist_linux_train.prototxt  lenet-5_mnist_windows_solver.prototxt  lenet-5_mnist_windows_test.prototxt  lenet-5_mnist_windows_train.prototxt
test_data/Net/DenseNet/: readme.txt
test_data/Net/DenseNet/DenseNet-121/: deploy.prototxt  solver.prototxt  train.prototxt
test_data/Net/ResNet/: readme.txt
test_data/Net/ResNet/ResNet-101/: deploy.prototxt  solver.prototxt  train.prototxt
test_data/Net/ResNet/ResNet-152/: deploy.prototxt  (+2 more)
test_data/Net/VGG-16/: vgg-16_deploy.prototxt  vgg-16_solver.prototxt  vgg-16_train.prototxt
test_data/images/object_recognition/: readme.txt
test_data/model/: test_net_1.prototxt  test_net_2.prototxt  test_net_3.prototxt  test_net_4.prototxt  test_net_5.prototxt  test_net_6.prototxt  test_net_7.prototxt  test_net_8.prototxt
test_data/model/cifar10/: cifar10_quick_solver.prototxt  cifar10_quick_solver_linux.prototxt  cifar10_quick_train_test.prototxt  cifar10_quick_train_test_.prototxt  cifar10_quick_train_test_linux.prototxt
test_data/model/mnist/: lenet_solver.prototxt  lenet_solver_linux.prototxt  lenet_train_test.prototxt  lenet_train_test_.prototxt  lenet_train_test_linux.prototxt  mnist_tensorrt.caffemodel  mnist_tensorrt.prototxt  mnist_tensorrt_mean.binary  mnist_tensorrt_mean.binaryproto
test_data/third_party_library/: caffe_tmp.proto  ml.helloworld.proto
(+33 files in other folders)
